--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "semaphore.h": "c"
+        "semaphore.h": "c",
+        "cstdio": "c",
+        "stdio.h": "c"
     }
 }
